--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>Java Unit Test in VIM</h2>
 
         <section id="downloads">
+          <a href="https://wsdjeg.github.io/" class="btn">HOME</a>
           <a href="https://github.com/wsdjeg/JavaUnit.vim/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/wsdjeg/JavaUnit.vim/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/wsdjeg/JavaUnit.vim" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
